--- a/chromedrivers/scrapy.cfg
+++ b/chromedrivers/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = wikipedia.settings
+default = chromedrivers.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = wikipedia
+project = chromedrivers
